app/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: backend
  name: backend
  namespace: app
spec:
  volumes:
  - name: home
    configMap:
      name: backend-cm
  containers:
  - image: nginx
    name: backend-app
    volumeMounts:
    - name: home
      mountPath: /usr/share/nginx/html
