app/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
  namespace: app
spec:
  volumes:
  - name: home
    configMap:
      name: frontend-cm
  containers:
  - image: nginx
    name: frontend
    volumeMounts:
    - name: home
      mountPath: /usr/share/nginx/html
