app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - foo.com
    secretName: frontend-backend-tls
  rules:
  - host: foo.com
    http:  
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
